--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,3 +35,15 @@ jobs:
       
       - name: Deploy notification
         run: echo "Images pushed to Docker Hub successfully!"
+      
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd /home/ubuntu/todo-app
+            curl -o deploy.sh https://raw.githubusercontent.com/0xthuve/ToDo---DevOps/main/deployment/deploy.sh
+            chmod +x deploy.sh
+            ./deploy.sh ${{ secrets.DOCKER_USERNAME }}
